# second_brain

./: .gitignore  CLAUDE.md  Dockerfile  ISSUES.md  README.md  pyproject.toml
.claude/skills/llm-wiki/: SKILL.md
.claude/skills/llm-wiki/references/: agents.md  api.md  core-modules.md  graph.md  reader.md
backend/: api_reference.md  server.py
deploy/: deploy_backend.py  deploy_frontend.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  graph.ts  ingest.ts  query.ts  queryStream.ts  search.ts  wiki.ts
frontend/src/components/graph/: GraphFrame.tsx  GraphStats.tsx
frontend/src/components/layout/: Shell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: Badge.tsx  JobCard.tsx  MarkdownRenderer.tsx  Spinner.tsx  Toast.tsx
frontend/src/hooks/: useJobPoller.ts  useQuerySessions.ts  useWikiPages.ts  useWikiStatus.ts
frontend/src/lib/: parseFrontmatter.ts  parseIndex.ts  parseWikiPath.ts  slugify.ts  wikilinkPlugin.ts
frontend/src/pages/: DashboardPage.tsx  GraphPage.tsx  IdeasPage.tsx  IngestPage.tsx  QueryPage.tsx  WikiPage.tsx  WikiPageDetail.tsx
src/second_brain/: cli.py  config.py  graph.py  llm.py  reader.py  search.py  wiki.py
src/second_brain/agents/: compiler.py  query.py  review.py
src/second_brain/api/: jobs.py  main.py  models.py
src/second_brain/api/routers/: graph.py  ingest.py  query.py  search.py  wiki.py
