[project]
name = "second-brain"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "html2text>=2024.2",
    "pypdf>=4.0",
    "youtube-transcript-api>=0.6",
    "duckduckgo-search>=6.0",
]

[project.scripts]
second-brain = "second_brain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
